<resources>
    <string name="app_name">Food Paradise</string>
    <string name="app_desc">Get restaurant food delivered \nright at your seat</string>
    <string name="enter_pnr">Enter your journey PNR</string>
    <string name="pnr_digits_error">Please enter your 10 digit PNR</string>
    <string name="pnr_not_found_error">PNR number not found</string>
    <string name="terms_conditions">By placing order you accept our \n<b>Terms and Conditions</b></string>
    <string name="fetching_pnr_details">Fetching PNR details</string>
    <string name="fetching_vendor_details">Fetching vendor details</string>
    <string name="please_wait_a_moment">Please wait a moment</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="no_vendors_available">No vendors available</string>
    <string name="please_try_again">Something went wrong, please try again after some time</string>
    <string name="serviceable_stations">Serviceable stations based on your journey progress</string>
    <string name="order_food">Order Food</string>
    <string name="order_before_2_hours_of_arrival">Order before 2 hours of arrival</string>
    <string name="add">Add</string>
    <string name="gst_desc">GST and other charges may apply later</string>
    <string name="Continue">Continue</string>
    <string name="replace_cart_item">Replace cart item?</string>
    <string name="cart_contains_items">Your cart contains dishes from restaurant. Do you want to discard the selection and add dishes from the new restaurant?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="details_confirmation">Details Confirmation</string>
    <string name="save_amp_continue"><![CDATA[Save & Continue]]></string>
    <string name="enter_your_personal_info">Enter your personal info</string>
    <string name="passenger_name">Passenger Name</string>
    <string name="enter_passenger_name">Enter passenger name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="coach">Coach</string>
    <string name="seat_number">Seat Number</string>
    <string name="confirm_order">Confirm order</string>
    <string name="add_more_items">Please add more items to proceed</string>
    <string name="verify_your_order">Verify your order</string>
    <string name="total">Total</string>
    <string name="subtotal">Subtotal</string>
    <string name="gst">GST</string>
    <string name="order_placed">Order Placed</string>
    <string name="order_details">Order Details</string>
    <string name="food_details">Food Details</string>
    <string name="place_another_order">Place new order</string>
    <string name="your_orders">Your Orders</string>
    <string name="boarding">Boarding</string>
    <string name="pnr">PNR</string>
    <string name="train">Train #</string>
    <string name="date">Date</string>
</resources>
