<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <ImageView
        android:id="@+id/imageAppIcon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:src="@drawable/app_icon" />

    <TextView
        android:id="@+id/textAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/textAppDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/app_desc"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editPNRNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/primary_color_box"
        android:drawableEnd="@drawable/right_arrow_black"
        android:drawableRight="@drawable/right_arrow_black"
        android:hint="@string/enter_pnr"
        android:inputType="number"
        android:maxLength="10"
        android:padding="15dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/termsAndConditions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:textSize="14sp" />

</LinearLayout>