<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".activities.StationsActivity">

        <include layout="@layout/activity_base" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorLightAccent"
            android:orientation="horizontal"
            android:padding="5dp"
            android:weightSum="4">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9">

                <TextView
                    android:id="@+id/textDateTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:text="@string/date"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textDateValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textDateTitle"
                    android:padding="3dp"
                    android:text="28 Mar"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9">

                <TextView
                    android:id="@+id/textTrainNumberTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:text="@string/train"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textTrainNumberValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textTrainNumberTitle"
                    android:padding="3dp"
                    android:text="22648"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.3">

                <TextView
                    android:id="@+id/textPNRNumberTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:text="@string/pnr"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textPNRNumberValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textPNRNumberTitle"
                    android:padding="3dp"
                    android:text="1234567890"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9">

                <TextView
                    android:id="@+id/textBoardingTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:text="@string/boarding"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textBoardingValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textBoardingTitle"
                    android:padding="3dp"
                    android:text="CBE"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textServiceableStations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/serviceable_stations"
            android:textSize="16sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerStationDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>