<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ConfirmOrderActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/footerLayout"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/activity_base" />

            <!--Header Layout-->
            <include
                android:id="@+id/layoutVendorDetails"
                layout="@layout/layout_vendor_details" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerSelectedItems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/shimmerColor" />

            <!--Subtotal and GST-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/textSubtotal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/subtotal"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textSubtotalValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="end"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/textGST"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/gst"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textGSTValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="end"
                        android:textSize="16sp" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/shimmerColor" />

            <!--Total-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="1">

                <TextView
                    android:id="@+id/textTotal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/total"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textTotalValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="end"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/shimmerColor" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <!-- Footer Layout -->
    <RelativeLayout
        android:id="@+id/footerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <include
            android:id="@+id/layoutPassengerDeliveryDetails"
            layout="@layout/layout_passenger_delivery_details" />

        <LinearLayout
            android:id="@+id/selectedItemsFooterLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutPassengerDeliveryDetails"
            android:background="@color/colorPrimaryDark"
            android:orientation="horizontal"
            android:padding="10dp"
            android:visibility="visible"
            android:weightSum="1">

            <TextView
                android:id="@+id/textVerifyYourOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.4"
                android:text="@string/verify_your_order"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonContinue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.6"
                android:padding="15dp"
                android:text="@string/Continue"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>