<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/textPlaceAnotherOrder"
        android:fillViewport="true"
        tools:context=".activities.OrderPlacedActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/activity_base" />

            <!--OTP Section-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textOrderPlaced"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:background="@color/lightGreen"
                    android:padding="10dp"
                    android:text="@string/order_placed"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textOtpValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@color/colorPrimary"
                    android:padding="10dp"
                    android:text="OTP: 1120"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/shimmerColor" />

            <!--Order Details Header Section-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="50sp"
                    android:layout_weight="0.5"
                    android:padding="5dp"
                    android:scaleType="fitStart"
                    android:src="@drawable/order_bag" />

                <TextView
                    android:id="@+id/textOrderDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:padding="5dp"
                    android:text="@string/order_details"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

            </LinearLayout>

            <!--Order Details Value Section-->
            <include layout="@layout/layout_passenger_delivery_details" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/shimmerColor" />

            <!--Food Details Header Section-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="50sp"
                    android:layout_weight="0.5"
                    android:padding="5dp"
                    android:scaleType="fitStart"
                    android:src="@drawable/app_icon" />

                <TextView
                    android:id="@+id/textFoodDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:padding="5dp"
                    android:text="@string/food_details"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

            </LinearLayout>

            <!--Vendor Header Section-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <ImageView
                    android:id="@+id/imageVendorLogo"
                    android:layout_width="75dp"
                    android:layout_height="50sp"
                    android:layout_weight="0.5"
                    android:padding="5dp"
                    android:scaleType="fitStart"
                    android:src="@drawable/app_icon" />

                <TextView
                    android:id="@+id/textVendorName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:padding="5dp"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/shimmerColor" />

            <!--Food Details Value Section-->
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerOrderedItems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/shimmerColor" />

            <!--Subtotal and GST-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/textSubtotal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/subtotal"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textSubtotalValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="end"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/textGST"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/gst"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textGSTValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="end"
                        android:textSize="16sp" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/shimmerColor" />

            <!--Total-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="1">

                <TextView
                    android:id="@+id/textTotal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/total"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textTotalValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="end"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/shimmerColor" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <TextView
        android:id="@+id/textPlaceAnotherOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/place_another_order"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

</RelativeLayout>